Added bulk upload for Casetype, Court, PoliceStation

--- a/templates/cases/courts.html
+++ b/templates/cases/courts.html
@@ -3,13 +3,7 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-
-
-<div class="container">
-  <div class="row">
-              <div class="col-md-3  ml-3"><button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg">Create Courts</button></div>
-  </div>
-</div>
+<br>
           
 <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-lg">
@@ -29,6 +23,7 @@
                               <div class="row">
                                 <div class="col-md-2 offset-md-3"><button type="submit" class="btn btn-primary">Create</button></div>
                               </div>
+                              <br>
                   
                             </form>
                           </div>
@@ -44,10 +39,10 @@
     <div class="card mb-4 ml-4 mr-4">
               <div class="card-header">
                 <i class="fas fa-table me-1"></i>
-                Case Types
+                Courts
                 <div class="float-end">
-                  <a href="#" class="btn btn-primary me-2">Create</a>
-                  <a href="#" class="btn btn-primary">Bulk Create</a>
+                  <a type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg">Create</a>
+                  <a href="{% url 'bulk_upload_courts' %}" class="btn btn-success">Bulk Create</a>
                 </div>
               </div>
               <div class="card-body">
@@ -68,7 +63,9 @@
                     {% for singlecourt in courts %}
                         <tr>
                           <td>{{ singlecourt.court }}</td>
-                          <td><a href="/courts/{{ singlecourt.id }}">Edit</a></td> <!-- Add an "Edit" button -->
+                          <td>
+                            <a href="/courts/{{ singlecourt.id }}" type="button" class="btn btn-info" data-toggle="modal" data-target=".bd-example-modal-lg">Edit</a>
+                          </td>
                         </tr>
                       {% endfor %}
                   </tbody>
