--- a/templates/cases/all_client.html
+++ b/templates/cases/all_client.html
@@ -7,6 +7,10 @@
         <div class="card-header">
             <i class="fas fa-table me-1"></i>
             All Clients
+            <div class="float-end">
+              <a href="{% url 'add-client' %}" class="btn btn-primary">Add Client</a>
+              <a href="{% url 'bulk_upload_clients' %}" class="btn btn-success">Bulk Add</a>
+            </div>
         </div>
         <div class="card-body">
           {% if clients %}
