--- a/templates/cases/case_type.html
+++ b/templates/cases/case_type.html
@@ -5,12 +5,6 @@
 {% block content %}
 <br>
 
-<div class="container">
-  <div class="row">
-    <div class="col-md-3  ml-3"><button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg">Create CaseType</button></div>
-  </div>
-</div>
-
 <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
@@ -29,6 +23,7 @@
                     <div class="row">
                       <div class="col-md-2 offset-md-3"><button type="submit" class="btn btn-primary">Create</button></div>
                     </div>
+                    <br>
         
                   </form>
                 </div>
@@ -46,8 +41,8 @@
       <i class="fas fa-table me-1"></i>
       Case Types
       <div class="float-end">
-        <a href="#" class="btn btn-primary me-2">Create</a>
-        <a href="#" class="btn btn-primary">Bulk Create</a>
+        <a type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg">Create</a>
+        <a href="{% url 'bulk_upload_casetype' %}" class="btn btn-success">Bulk Create</a>
       </div>
     </div>
     <div class="card-body">
@@ -68,7 +63,9 @@
           {% for case in casetypes %}
           <tr>
             <td>{{ case.case_type }}</td>
-            <td><a href="/case-type/{{ case.id }}">Edit</a></td>
+            <td>
+              <a href="/case-type/{{ case.id }}" type="button" class="btn btn-info" data-toggle="modal" data-target=".bd-example-modal-lg">Edit</a>
+            </td>
           </tr>
           {% endfor %}
         </tbody>
