--- a/templates/cases/case_type.html
+++ b/templates/cases/case_type.html
@@ -35,46 +35,46 @@
 
   <br>
 
-  {% if casetypes %}
   <div class="card mb-4 ml-4 mr-4">
     <div class="card-header">
-      <i class="fas fa-table me-1"></i>
-      Case Types
-      <div class="float-end">
-        <a type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg">Create</a>
-        <a href="{% url 'bulk_upload_casetype' %}" class="btn btn-success">Bulk Create</a>
-      </div>
+        <i class="fas fa-table me-1"></i>
+        Case Types
+        <div class="float-end">
+            <a type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg">Create</a>
+            <a href="{% url 'bulk_upload_casetype' %}" class="btn btn-success">Bulk Create</a>
+        </div>
     </div>
     <div class="card-body">
-      <table id="datatablesSimple">
-        <thead>
-          <tr>
-            <th>Case Type</th>
-            <th>Edit</th>
-          </tr>
-        </thead>
-        <tfoot>
-          <tr>
-            <th>Case Type</th>
-            <th>Edit</th>
-          </tr>
-        </tfoot>
-        <tbody>
-          {% for case in casetypes %}
-          <tr>
-            <td>{{ case.case_type }}</td>
-            <td>
-              <a href="/case-type/{{ case.id }}" type="button" class="btn btn-info" data-toggle="modal" data-target=".bd-example-modal-lg">Edit</a>
-            </td>
-          </tr>
-          {% endfor %}
-        </tbody>
-      </table>
+        {% if casetypes %}
+            <table id="datatablesSimple">
+                <thead>
+                    <tr>
+                        <th>Case Type</th>
+                        <th>Edit</th>
+                    </tr>
+                </thead>
+                <tfoot>
+                    <tr>
+                        <th>Case Type</th>
+                        <th>Edit</th>
+                    </tr>
+                </tfoot>
+                <tbody>
+                    {% for case in casetypes %}
+                    <tr>
+                        <td>{{ case.case_type }}</td>
+                        <td>
+                            <a href="/case-type/{{ case.id }}" type="button" class="btn btn-info"
+                                data-toggle="modal" data-target=".bd-example-modal-lg">Edit</a>
+                        </td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        {% else %}
+            <h3 class="text-center alert alert-primary" role="alert">Currently, You don't have any Case Types</h3>
+        {% endif %}
     </div>
-  </div>
-{% else %}
-  <h3 class="text-center alert alert-primary" role="alert">Currently, You don't have any Case Types</h3>
-{% endif %}
-
+</div>
 
 {% endblock %}
