--- a/templates/cases/courts.html
+++ b/templates/cases/courts.html
@@ -35,45 +35,47 @@
 
           <br>
 
-  {% if courts %}
-    <div class="card mb-4 ml-4 mr-4">
-              <div class="card-header">
+          <div class="card mb-4 ml-4 mr-4">
+            <div class="card-header">
                 <i class="fas fa-table me-1"></i>
                 Courts
                 <div class="float-end">
-                  <a type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg">Create</a>
-                  <a href="{% url 'bulk_upload_courts' %}" class="btn btn-success">Bulk Create</a>
+                    <a type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg">Create</a>
+                    <a href="{% url 'bulk_upload_courts' %}" class="btn btn-success">Bulk Create</a>
                 </div>
-              </div>
-              <div class="card-body">
-                <table id="datatablesSimple">
-                  <thead>
-                    <tr>
-                      <th>Court Type</th>
-                      <th>Edit</th>
-                    </tr>
-                  </thead>
-                  <tfoot>
-                    <tr>
-                      <th>Court Type</th>
-                      <th>Edit</th>
-                    </tr>
-                  </tfoot>
-                  <tbody>
-                    {% for singlecourt in courts %}
-                        <tr>
-                          <td>{{ singlecourt.court }}</td>
-                          <td>
-                            <a href="/courts/{{ singlecourt.id }}" type="button" class="btn btn-info" data-toggle="modal" data-target=".bd-example-modal-lg">Edit</a>
-                          </td>
-                        </tr>
-                      {% endfor %}
-                  </tbody>
-                </table>
-              </div>
-    </div>
-  {% else %}
-    <h3 class="text-center alert alert-primary" role="alert">Currently, You don't have any Courts</h3>
-  {% endif %}
+            </div>
+            <div class="card-body">
+                {% if courts %}
+                    <table id="datatablesSimple">
+                        <thead>
+                            <tr>
+                                <th>Court Type</th>
+                                <th>Edit</th>
+                            </tr>
+                        </thead>
+                        <tfoot>
+                            <tr>
+                                <th>Court Type</th>
+                                <th>Edit</th>
+                            </tr>
+                        </tfoot>
+                        <tbody>
+                            {% for singlecourt in courts %}
+                            <tr>
+                                <td>{{ singlecourt.court }}</td>
+                                <td>
+                                    <a href="/courts/{{ singlecourt.id }}" type="button" class="btn btn-info"
+                                        data-toggle="modal" data-target=".bd-example-modal-lg">Edit</a>
+                                </td>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                {% else %}
+                    <h3 class="text-center alert alert-primary" role="alert">Currently, You don't have any Courts</h3>
+                {% endif %}
+            </div>
+        </div>
+        
 
 {% endblock %}
