--- a/templates/cases/police_stations.html
+++ b/templates/cases/police_stations.html
@@ -35,60 +35,47 @@
 
           <br>
 
-  {% if stations %}
-    <div class="card mb-4 ml-4 mr-4">
-              <div class="card-header">
+          <div class="card mb-4 ml-4 mr-4">
+            <div class="card-header">
                 <i class="fas fa-table me-1"></i>
                 Police Stations
                 <div class="float-end">
-                  <a type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg">Create</a>
-                  <a href="{% url 'bulk_upload_stations' %}" class="btn btn-success">Bulk Upload</a>
+                    <a type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg">Create</a>
+                    <a href="{% url 'bulk_upload_stations' %}" class="btn btn-success">Bulk Upload</a>
                 </div>
-              </div>
-              <div class="card-body">
-                <table id="datatablesSimple">
-                  <thead>
-                    <tr>
-                      <th>Police Station</th>
-                      <th>Edit</th>
-                    </tr>
-                  </thead>
-                  <tfoot>
-                    <tr>
-                      <th>Police Station</th>
-                      <th>Edit</th>
-                    </tr>
-                  </tfoot>
-                  <tbody>
-                    {% for single_station in stations %}
-                      <tr>
-                        <td>{{ single_station.station }}</td>
-                        <td>
-                          <a href="/stations/{{ single_station.id }}" type="button" class="btn btn-info" data-toggle="modal" data-target=".bd-example-modal-lg">Edit</a>
-                        </td>
-                      </tr>
-                    {% endfor %}
-                  </tbody>
-                </table>
-              </div>
-    </div>
-  {% else %}
-    <h3 class="text-center alert alert-primary" role="alert">Currently, You don't have any Stations</h3>
-  {% endif %}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+            </div>
+            <div class="card-body">
+                {% if stations %}
+                    <table id="datatablesSimple">
+                        <thead>
+                            <tr>
+                                <th>Police Station</th>
+                                <th>Edit</th>
+                            </tr>
+                        </thead>
+                        <tfoot>
+                            <tr>
+                                <th>Police Station</th>
+                                <th>Edit</th>
+                            </tr>
+                        </tfoot>
+                        <tbody>
+                            {% for single_station in stations %}
+                            <tr>
+                                <td>{{ single_station.station }}</td>
+                                <td>
+                                    <a href="/stations/{{ single_station.id }}" type="button" class="btn btn-info"
+                                        data-toggle="modal" data-target=".bd-example-modal-lg">Edit</a>
+                                </td>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                {% else %}
+                    <h3 class="text-center alert alert-primary" role="alert">Currently, You don't have any Stations</h3>
+                {% endif %}
+            </div>
+        </div>
+        
  
 {% endblock %}
